welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:28: error: not found: value avnce
def faireMotifGauche() {faireForme1(Color.RED); avnce(2); faireForme2 (Color.BLUE); repositionHaut();
                                                ^